src/objects/User_Guide__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Content__c</fullName>
        <description>Content of the User Guide</description>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileAttachment__c</fullName>
        <label>FileAttachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>File_Attachment__c</fullName>
        <label>File Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Main_Content__c</fullName>
        <label>Main Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>User Guide</label>
    <pluralLabel>User Guides</pluralLabel>
</CustomObject>